寄付ページの項目をナビゲーションバーに登録

--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -11,32 +11,35 @@
             サービス
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="https://apps.m86.work/genkai/">限界大会</a>
-            <a class="dropdown-item" href="#">マイクラサーバー</a>
-            <a class="dropdown-item" href="https://apps.m86.work/magicalcv/">MagicalConverter</a>
-            <a class="dropdown-item" href="https://apps.m86.work/warbot/">WARBot</a>
+            <a class="dropdown-item" id="genkai" href="https://apps.m86.work/genkai/">限界大会</a>
+            <a class="dropdown-item" id="cms" href="#">マイクラサーバー</a>
+            <a class="dropdown-item" id="magicalcv" href="https://apps.m86.work/magicalcv/">MagicalConverter</a>
+            <a class="dropdown-item" id="warbot" href="https://apps.m86.work/warbot/">WARBot</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">その他</a>
+            <a class="dropdown-item" id="other" href="#">その他</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://m86.work/">ブログ</a>
+          <a class="nav-link" id="blog" href="https://m86.work/">ブログ</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="othersite" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             関連サイト
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="https://genkai.m86.work/">限界映像大会</a>
-            <a class="dropdown-item" href="https://genkaimusic.m86.work/">限界音楽村</a>
-            <a class="dropdown-item" href="https://portfolio.m86.work/">Portfolio</a>
+            <a class="dropdown-item" id="genkai-old" href="https://genkai.m86.work/">限界映像大会</a>
+            <a class="dropdown-item" id="genkaimusic" href="https://genkaimusic.m86.work/">限界音楽村</a>
+            <a class="dropdown-item" id="portfolio" href="https://portfolio.m86.work/">Portfolio</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://dev.m86.work/notice/notice.html">お知らせ</a>
+          <a class="nav-link" id="info" href="https://dev.m86.work/notice/notice.html">お知らせ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://apps.m86.work/contact/">お問い合わせ</a>
+            <a class="nav-link" id="donate" href="https://dev.m86.work/donate/index.html">寄付</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="contact" href="https://apps.m86.work/contact/">お問い合わせ</a>
         </li>
       </ul>
     </div>
