--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript">
       $(function(){
-        $("#nav-01").load("./footer/copyright.html");
-      })
+        $("#nav-01").load("https://dev.m86.work/nav/navigation.html");
+        $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
+      });
     </script>
     <link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://dev.m86.work/favicon/favicon-32x32.png">
@@ -47,49 +48,7 @@
 
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">StarLight</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              サービス
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="https://apps.m86.work/genkai/">限界大会</a>
-              <a class="dropdown-item" href="https://apps.m86.work/creatorsmc/">マイクラサーバー</a>
-              <a class="dropdown-item" href="https://apps.m86.work/magicalcv/">MagicalConverter</a>
-              <a class="dropdown-item" href="https://apps.m86.work/warbot/">WARBot</a>
-              <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">その他</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://m86.work/">ブログ</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              関連サイト
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="https://genkai.m86.work/">限界映像大会</a>
-              <a class="dropdown-item" href="https://genkaimusic.m86.work/">限界音楽村</a>
-              <a class="dropdown-item" href="https://portfolio.m86.work/">Portfolio</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./notice/notice.html">お知らせ</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://apps.m86.work/contact/">お問い合わせ</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div id="nav-01"></div>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">StarLight</h1>
