--- a/notice/notice2.html
+++ b/notice/notice2.html
@@ -14,11 +14,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script type="text/javascript">
       $(function(){
-        $("#nav-01").load("notice-nav.html");
-      })
-      $(function(){
+        $("#nav-01").load("https://dev.m86.work/nav/navigation.html");
         $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
-      })
+      });
+      $(window).on('load',function(){
+        $('#info').addClass('active');
+      });
     </script>
     <link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://dev.m86.work/favicon/favicon-32x32.png">
