--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -12,7 +12,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" id="genkai" href="https://apps.m86.work/genkai/">限界大会</a>
-            <a class="dropdown-item" id="cms" href="#">マイクラサーバー</a>
+            <a class="dropdown-item" id="cms" href="https://apps.m86.work/creatorsmc/">マイクラサーバー</a>
             <a class="dropdown-item" id="magicalcv" href="https://apps.m86.work/magicalcv/">MagicalConverter</a>
             <a class="dropdown-item" id="warbot" href="https://apps.m86.work/warbot/">WARBot</a>
             <div class="dropdown-divider"></div>
@@ -20,7 +20,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="blog" href="https://m86.work/">ブログ</a>
+          <a class="nav-link" id="blog" href="https://minato86.hatenablog.com/">ブログ</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="othersite" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -36,7 +36,7 @@
           <a class="nav-link" id="info" href="https://dev.m86.work/notice/notice.html">お知らせ</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" id="donate" href="https://dev.m86.work/donate/index.html">寄付</a>
+            <a class="nav-link" id="donate" href="https://dev.m86.work/donate/">寄付</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="contact" href="https://apps.m86.work/contact/">お問い合わせ</a>
