もっと見るボタンにMarginを追加

--- a/notice/notice.html
+++ b/notice/notice.html
@@ -95,7 +95,7 @@
       <a href="./post/3.html" class="btn btn-primary">続きを読む</a>
       </div>
     </div>
-    <div class="text-primary more text-center"><i class="fas fa-caret-down"></i> もっと見る</div>
+    <div class="text-primary more text-center my-5"><i class="fas fa-caret-down"></i> もっと見る</div>
     <div class="kiji">
       <div class="card m-3">
         <div class="card-header">
@@ -142,9 +142,9 @@
           <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
           </script>
-          </center>
+        </center>
     </div>
-    <div class="text-primary more text-center"><i class="fas fa-caret-down"></i> もっと見る</div>
+    <div class="text-primary more text-center my-5"><i class="fas fa-caret-down"></i> もっと見る</div>
     <div class="kiji">
         <div class="card m-3">
             <div class="card-header">
