--- a/notice/notice.html
+++ b/notice/notice.html
@@ -70,7 +70,7 @@
       <h5 class="card-title">WARBotの更新ログの変更について</h5>
       <p><span class="badge badge-secondary">投稿 2019/05/14</span><span class="badge badge-secondary">更新 2019/06/05</span>
       <p class="card-text">WARBotの更新ログを、以下のページに統一します。</p>
-      <a href="https://gist.github.com/Chipsnet/e86583934ca7ef74b2134dfc4b0db14b" class="btn btn-primary">更新ログ</a>
+      <a href="https://apps.m86.work/warbot/changelog.html" class="btn btn-primary">更新ログ</a>
       </div>
     </div>
     <div class="card m-3">
