update: お知らせを現在のページに再リンク

--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -33,7 +33,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="info" href="https://dev.m86.work/notice/notice.html">お知らせ</a>
+          <a class="nav-link" id="info" href="https://lab.m86.work/">お知らせ</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" id="donate" href="https://dev.m86.work/donate/">寄付</a>
