update: ありもしないプライバシーポリシーを削除

--- a/footer/copyright.html
+++ b/footer/copyright.html
@@ -1,5 +1,5 @@
 <footer class="page-footer font-small blue">
     <div class="footer-copyright text-center py-3">© 2019 Copyright
-    <a href="https://dev.m86.work/"> Minato86</a><br><a href="https://dev.m86.work/">プライバシーポリシー</a>
+    <a href="https://dev.m86.work/"> Minato86</a>
     </div>
 </footer>
