fix: 広告の入れ忘れを修正

--- a/donate/index.html
+++ b/donate/index.html
@@ -103,6 +103,19 @@
                 <h4 class="mt-5">団体運営</h4>
                 <p>現在運営している団体の運営費用として利用します。<br>
                 グッズを作ったり、企画を行ったりと様々な用途で利用します。</p>
+                <center>
+                <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                <!-- devsites -->
+                <ins class="adsbygoogle"
+                        style="display:block"
+                        data-ad-client="ca-pub-7860710257272145"
+                        data-ad-slot="2222341411"
+                        data-ad-format="auto"
+                        data-full-width-responsive="true"></ins>
+                <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+                </center>
                 <h3 class="mt-5">寄付方法</h3>
                 <hr>
                 <h4>Kyashで支援</h4>
