--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -11,7 +11,7 @@
             サービス
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" id="genkai" href="https://apps.m86.work/genkai/">限界大会</a>
+            <a class="dropdown-item" id="genkai" href="https://dev.m86.work/genkai/">限界大会</a>
             <a class="dropdown-item" id="cms" href="https://apps.m86.work/creatorsmc/">マイクラサーバー</a>
             <a class="dropdown-item" id="magicalcv" href="https://apps.m86.work/magicalcv/">MagicalConverter</a>
             <a class="dropdown-item" id="warbot" href="https://apps.m86.work/warbot/">WARBot</a>
