fix: 限界大会のURLを修正

--- a/donate/index.html
+++ b/donate/index.html
@@ -95,7 +95,7 @@
                 <hr>
                 <h4><a href="//apps.m86.work/warbot">WARBot</a></h4>
                 <p>サーバー費用や開発費用、API利用料金に使わせていただきます。</p>
-                <h4 class="mt-5"><a href="//apps.m86.work/genkai">限界大会</a></h4>
+                <h4 class="mt-5"><a href="//dev.m86.work/genkai">限界大会</a></h4>
                 <p>運営資金やHP、お題投稿Botの開発費用に使わせていだきます。<br>
                 その他、企画を行う際の特設ページ制作費用にも利用します。</p>
                 <h4 class="mt-5">ソフトウェア開発</h4>
