update: トップページを更新

--- a/503/index.html
+++ b/503/index.html
@@ -33,25 +33,25 @@
     </style>
 
     <!-- HTML Meta Tags -->
-    <title>寄付 - StarLight</title>
-    <meta name="description" content="運営への寄付を受け付けています。">
+    <title>メンテナンス中 - StarLight</title>
+    <meta name="description" content="現在メンテナンス中です。">
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="寄付 - StarLight">
-    <meta itemprop="description" content="運営への寄付を受け付けています。">
+    <meta itemprop="name" content="メンテナンス中 - StarLight">
+    <meta itemprop="description" content="現在メンテナンス中です。">
     <meta itemprop="image" content="https://dev.m86.work/favicon/image.png">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://dev.m86.work/donate/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="寄付 - StarLight">
-    <meta property="og:description" content="運営への寄付を受け付けています。">
+    <meta property="og:title" content="メンテナンス中 - StarLight">
+    <meta property="og:description" content="現在メンテナンス中です。">
     <meta property="og:image" content="https://dev.m86.work/favicon/image.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="寄付 - StarLight">
-    <meta name="twitter:description" content="運営への寄付を受け付けています。">
+    <meta name="twitter:title" content="メンテナンス中 - StarLight">
+    <meta name="twitter:description" content="現在メンテナンス中です。">
     <meta name="twitter:image" content="https://dev.m86.work/favicon/image.png">
 
     </head>
