--- a/index.html
+++ b/index.html
@@ -1,117 +1,126 @@
 <!doctype html>
 <html lang="ja">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,600,700&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+		<script type="text/javascript">
+		$(function(){
+			$("#nav-01").load("https://dev.m86.work/nav/navigation.html");
+			$("#footer-01").load("https://dev.m86.work/footer/copyright.html");
+		});
+		</script>
+		<style>
+			.jumbotron {
+				background: #00b09b;  /* fallback for old browsers */
+				background: -webkit-linear-gradient(to right, #96c93d, #00b09b);  /* Chrome 10-25, Safari 5.1-6 */
+				background: linear-gradient(to right, #96c93d, #00b09b); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+			}
+			body {
+				font-family: 'Noto Sans JP', sans-serif;
+			}
+			h2 {
+				font-weight: 700;
+			}
+			.inline {
+				display: inline;
+				font-size: 50px;
+			}
+		</style>
+		<link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="https://dev.m86.work/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="https://dev.m86.work/favicon/favicon-16x16.png">
+		<link rel="manifest" href="https://dev.m86.work/favicon/site.webmanifest">
+		<link rel="mask-icon" href="https://dev.m86.work/favicon/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
+		<title>StarLight</title>
+		<meta name="description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script type="text/javascript">
-      $(function(){
-        $("#nav-01").load("https://dev.m86.work/nav/navigation.html");
-        $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
-      });
-    </script>
-    <link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://dev.m86.work/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="https://dev.m86.work/favicon/favicon-16x16.png">
-    <link rel="manifest" href="https://dev.m86.work/favicon/site.webmanifest">
-    <link rel="mask-icon" href="https://dev.m86.work/favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <title>StarLight</title>
-    <meta name="description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:site" content="@minatoo86" />
 
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@minatoo86" />
+		<!-- Google / Search Engine Tags -->
+		<meta itemprop="name" content="StarLight">
+		<meta itemprop="description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
+		<meta itemprop="image" content="https://dev.m86.work/favicon/image.png">
 
-    <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="StarLight">
-    <meta itemprop="description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
-    <meta itemprop="image" content="https://dev.m86.work/favicon/image.png">
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url" content="https://dev.m86.work">
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="StarLight">
+		<meta property="og:description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
+		<meta property="og:image" content="https://dev.m86.work/favicon/image.png">
 
-    <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://dev.m86.work">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="StarLight">
-    <meta property="og:description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
-    <meta property="og:image" content="https://dev.m86.work/favicon/image.png">
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="StarLight">
-    <meta name="twitter:description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
-    <meta name="twitter:image" content="https://dev.m86.work/favicon/image.png">
-
-  </head>
-  <body>
-    <div id="nav-01"></div>
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container">
-        <h1 class="display-4">StarLight</h1>
-        <p class="lead">あなたの人生をちょっと幸せにしたい。そんな思いで運営しています。</p>
-      </div><!-- /.container -->
-    </div><!-- /.jumbotron -->
-    <div class="container my-5">
-    <h2>マイペースな開発</h2>
-    <hr class="mb-4">
-    <p>開発速度は早くないかもしれません。気長にお待ち下さい。<br>更新情報や最新情報はお知らせで確認できます。</p>
-    <a class="btn btn-primary" href="./notice/notice.html" role="button">お知らせ</a>
-    </div>
-    <div class="container my-5">
-    <p>開発の裏話、商品紹介、雑な記事を見たい人は、ブログをチェックしてみてね！</p>
-    <a class="btn btn-primary mb-3" href="https://minato86.hatenablog.com/" role="button">ブログ</a>
-    <center>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- devsites -->
-    <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-7860710257272145"
-          data-ad-slot="2222341411"
-          data-ad-format="auto"
-          data-full-width-responsive="true"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    </center>
-    <h2 class="mt-5">運営サービス一覧</h2>
-    <hr class="mb-4">
-    <h3>MagicalConverter</h3>
-    <p>音楽データさえあれば、すぐに音楽を動画にできます。<br>自分の好みの画像や文字を入れることもできる、魔法の変換サービスです。</p>
-    <a class="btn btn-primary mb-5" href="https://apps.m86.work/magicalcv/" role="button">MagicalConverter</a>
-    <h3>WARBot</h3>
-    <p>フレンドリーで親しみやすい、バカだけど使い勝手がいい。そんなのを目指して作られた<br>DiscordのBotです。</p>
-    <a class="btn btn-primary" href="https://apps.m86.work/warbot/" role="button">WARBot</a>
-    <a class="btn btn-primary" href="https://apps.m86.work/warbot/commandlist.html" role="button">コマンドリスト</a>
-    <h3 class="mt-5">CreatorsMinecraftServer</h3>
-    <p>クリエイターのために作られた、進捗を破壊するマイクラサーバー。<br>クリエイターじゃなくても大歓迎です。</p>
-    <a class="btn btn-primary" href="https://apps.m86.work/creatorsmc/" role="button">公式サイト</a>
-    </div>
-    <div class="container my-5">
-    <h2>お問い合わせ</h2>
-    <hr class="mb-4">
-    <p>個人運営のサイトなので、サポートには限度があります。<br>お問い合わせの際は、ペットの猫（or犬）に話しかけるように優しくお願いします。</p>
-    <a class="btn btn-primary mb-3" href="https://apps.m86.work/contact/" role="button">お問い合わせ</a>
-    <center>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- devsites -->
-    <ins class="adsbygoogle"
-          style="display:block"
-          data-ad-client="ca-pub-7860710257272145"
-          data-ad-slot="2222341411"
-          data-ad-format="auto"
-          data-full-width-responsive="true"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-    </center>
-    <a href="./donate/" class="mt-5">StarLightに寄付をする</a>
-    </div>
-  </body>
-  <div id="nav-01">
-  </div>
-
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image">
+		<meta name="twitter:title" content="StarLight">
+		<meta name="twitter:description" content="あなたの人生をちょっと幸せにしたい。そんなサイトです。">
+		<meta name="twitter:image" content="https://dev.m86.work/favicon/image.png">
+	</head>
+	<body>
+		<div id="nav-01">
+		</div>
+			<div class="jumbotron jumbotron-fluid">
+				<div class="container text-white">
+					<h1 class="inline">StarLight </h1>by Minato86
+					<p class="lead">便利なWebサービス、いっぱい。</p>
+				</div>
+			</div>
+		<div class="container my-5">
+			<h2>StarLightって何？</h2>
+			<hr class="mb-4">
+			<p>Minato86によって運営されているWebサービスやサーバーをまとめて「StarLight Webサービス」と言います。</p>
+			<p>便利なWebサービスをホスト、皆様に提供することが使命です。</p>
+			<center>
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- devsites -->
+				<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-7860710257272145"
+					data-ad-slot="2222341411"
+					data-ad-format="auto"
+					data-full-width-responsive="true"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</center>
+			<h2 class="mt-5">運営サービス一覧</h2>
+			<hr class="mb-4">
+			<h3>WARBot</h3>
+			<p>愛され続けてついに1周年を突破したDiscordのBot。<br>
+			限界大会のお題投稿などを行っています。</p>
+			<a class="btn btn-primary" href="https://apps.m86.work/warbot/" role="button">公式サイト</a>
+			<h3 class="mt-5">CreatorsMinecraftServer</h3>
+			<p>クリエイターのために作られた、進捗を破壊するマイクラサーバー。<br>クリエイターじゃなくても大歓迎です。</p>
+			<a class="btn btn-primary" href="https://apps.m86.work/creatorsmc/" role="button">公式サイト</a>
+		</div>
+		<div class="container my-5">
+			<h2>お問い合わせ</h2>
+			<hr class="mb-4">
+			<p>サービスについてのお問い合わせは、下記フォームよりお願いします。<br>
+			なお、全てに返信するわけではありませんので、ご了承ください。</p>
+			<a class="btn btn-primary mb-3" href="//docs.google.com/forms/d/e/1FAIpQLSdSxK0hMhhZ3FnuHu3NrF1nHID0SPFVB3bQ4jpIWG97LeClQQ/viewform" target="_brank" role="button">お問い合わせ</a>
+			<center>
+				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+				<!-- devsites -->
+				<ins class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-7860710257272145"
+					data-ad-slot="2222341411"
+					data-ad-format="auto"
+					data-full-width-responsive="true"></ins>
+				<script>
+				(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</center>
+		</div>
+		<div id="nav-01" class="mt-5">
+		</div>
+	</body>
 </html>
