update: お問い合わせのリンクを更新

--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -39,7 +39,7 @@
             <a class="nav-link" id="donate" href="https://dev.m86.work/donate/">寄付</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="contact" href="https://apps.m86.work/contact/">お問い合わせ</a>
+          <a class="nav-link" id="contact" href="https://docs.google.com/forms/d/e/1FAIpQLSdSxK0hMhhZ3FnuHu3NrF1nHID0SPFVB3bQ4jpIWG97LeClQQ/viewform">お問い合わせ</a>
         </li>
       </ul>
     </div>
