add: 公式アカウントの項目を追加

--- a/genkai/index.html
+++ b/genkai/index.html
@@ -25,6 +25,9 @@
     .jt-2 {
         background-color: #ffe082;
     }
+    .jt-3 {
+        background-color: #4dd0e1;
+    }
     .center {
         text-align: center;
     }
@@ -233,6 +236,19 @@
                 運営を支援したい！と思っていただけたら、ぜひ寄付をお願いします。</p>
             </div>
             <button type="button" class="btn page-link text-dark d-inline-block mt-2" onclick="window.open().location.href='https://dev.m86.work/donate/'">詳しく見てみる</button>
+        </div>
+    </section>
+    <section id="point">
+        <div class="jumbotron jt-3 jumbotron-fluid mt-5">
+            <div class="container text-white">
+                <h1>公式アカウント</h1>
+                <h3 class="my-4">Twitter</h3>
+                <div class="large">
+                    <p>限界大会のお題や開催情報、その他お知らせなどを配信中！<br>
+                    フォロー推奨！！</p>
+                </div>
+                <button type="button" class="btn page-link text-dark d-inline-block mt-2" onclick="window.open().location.href='https://dev.m86.work/genkai/'">フォローする</button>
+            </div>
         </div>
     </section>
     <div id="footer-01" class="mt-5">
