--- a/genkai/index.html
+++ b/genkai/index.html
@@ -247,7 +247,7 @@
                     <p>限界大会のお題や開催情報、その他お知らせなどを配信中！<br>
                     フォロー推奨！！</p>
                 </div>
-                <button type="button" class="btn page-link text-dark d-inline-block mt-2" onclick="window.open().location.href='https://dev.m86.work/genkai/'">フォローする</button>
+                <button type="button" class="btn page-link text-dark d-inline-block mt-2" onclick="window.open().location.href='https://twitter.com/genkai_eizo'">フォローする</button>
             </div>
         </div>
     </section>
