update: 503ページを更新

--- a/503/index.html
+++ b/503/index.html
@@ -67,9 +67,11 @@
             </div>
             <div class="container">
                 <h1>限界大会について</h1>
-                <p>限界大会への参加は<a href="https://discord.gg/6tAqA7s">こちら</a>ルール等につきましては、サーバーのルールチャンネルを御覧ください。</p>
+                <p>公式サイトが変更になりました。<br>
+                新しい公式サイトは<a href="//dev.m86.work/genkai/">こちら</a></p>
                 <h1 class="mt-5">その他のサービスについて</h1>
-                <p>メンテナンス終了をお待ち下さい。</p>
+                <p>メンテナンス終了をお待ち下さい。<br>
+                なお、メンテナンス完了日時は未定です。</p>
             </div>
         </section>
     </body>
