fix: changelog link

--- a/warbot/index.html
+++ b/warbot/index.html
@@ -191,7 +191,7 @@
                     <p>WARBotの更新履歴を見ることができます。<br>
                     最新のアップデートをチェック！</p>
                 </div>
-                <button type="button" class="btn page-link text-dark d-inline-block mt-2" onclick="window.open().location.href='https://dev.m86.work/genkai/changelog.html'">更新履歴を見る</button>
+                <button type="button" class="btn page-link text-dark d-inline-block mt-2" onclick="window.open().location.href='https://dev.m86.work/warbot/changelog.html'">更新履歴を見る</button>
             </div>
         </div>
     </section>
