--- a/nav/navigation.html
+++ b/nav/navigation.html
@@ -14,7 +14,7 @@
             <a class="dropdown-item" id="genkai" href="https://dev.m86.work/genkai/">限界大会</a>
             <a class="dropdown-item" id="cms" href="https://apps.m86.work/creatorsmc/">マイクラサーバー</a>
             <a class="dropdown-item" id="magicalcv" href="https://apps.m86.work/magicalcv/">MagicalConverter</a>
-            <a class="dropdown-item" id="warbot" href="https://apps.m86.work/warbot/">WARBot</a>
+            <a class="dropdown-item" id="warbot" href="https://dev.m86.work/warbot/">WARBot</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" id="other" href="#">その他</a>
           </div>
