update: 閉鎖サイトを削除

--- a/index.html
+++ b/index.html
@@ -101,10 +101,7 @@
 			<h3>WARBot</h3>
 			<p>愛され続けてついに1周年を突破したDiscordのBot。<br>
 			限界大会のお題投稿などを行っています。</p>
-			<a class="btn btn-primary" href="https://apps.m86.work/warbot/" role="button">公式サイト</a>
-			<h3 class="mt-5">CreatorsMinecraftServer</h3>
-			<p>クリエイターのために作られた、進捗を破壊するマイクラサーバー。<br>クリエイターじゃなくても大歓迎です。</p>
-			<a class="btn btn-primary" href="https://apps.m86.work/creatorsmc/" role="button">公式サイト</a>
+			<a class="btn btn-primary" href="https://dev.m86.work/warbot/" role="button">公式サイト</a>
 		</div>
 		<div class="container my-5">
 			<h2>お問い合わせ</h2>
