change: ディレクトリを整理

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		<script type="text/javascript">
 		$(function(){
-			$("#nav-01").load("https://dev.m86.work/nav/navigation.html");
-			$("#footer-01").load("https://dev.m86.work/footer/copyright.html");
+			$("#nav-01").load("https://dev.m86.work/assets/nav/navigation.html");
+			$("#footer-01").load("https://dev.m86.work/assets/footer/copyright.html");
 		});
 		</script>
 		<style>
@@ -101,7 +101,7 @@
 			<h3>WARBot</h3>
 			<p>愛され続けてついに1周年を突破したDiscordのBot。<br>
 			限界大会のお題投稿などを行っています。</p>
-			<a class="btn btn-primary" href="https://dev.m86.work/warbot/" role="button">公式サイト</a>
+			<a class="btn btn-primary" href="./pages/warbot/" role="button">公式サイト</a>
 		</div>
 		<div class="container my-5">
 			<h2>お問い合わせ</h2>
