--- a/assets/nav/navigation.html
+++ b/assets/nav/navigation.html
@@ -11,10 +11,8 @@
             サービス
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" id="genkai" href="https://dev.m86.work/genkai/">限界大会</a>
-            <a class="dropdown-item" id="cms" href="https://apps.m86.work/creatorsmc/">マイクラサーバー</a>
-            <a class="dropdown-item" id="magicalcv" href="https://apps.m86.work/magicalcv/">MagicalConverter</a>
-            <a class="dropdown-item" id="warbot" href="https://dev.m86.work/warbot/">WARBot</a>
+            <a class="dropdown-item" id="genkai" href="https://dev.m86.work/pages/genkai/">限界大会</a>
+            <a class="dropdown-item" id="warbot" href="https://dev.m86.work/pages/warbot/">WARBot</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" id="other" href="#">その他</a>
           </div>
@@ -27,9 +25,8 @@
             関連サイト
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" id="genkai-old" href="https://genkai.m86.work/">限界映像大会</a>
-            <a class="dropdown-item" id="genkaimusic" href="https://genkaimusic.m86.work/">限界音楽村</a>
-            <a class="dropdown-item" id="portfolio" href="https://portfolio.m86.work/">Portfolio</a>
+            <a class="dropdown-item" id="outlogging" href="https://outlogging.work/">OutLogging</a>
+            <a class="dropdown-item" id="genkaimusic" href="https://genkaimusic.com/">限界音楽村</a>
           </div>
         </li>
         <li class="nav-item">
