update: genkai page link

--- a/pages/genkai/index.html
+++ b/pages/genkai/index.html
@@ -71,8 +71,8 @@
     <meta name="twitter:image" content="https://dev.m86.work/favicon/image.png">
     <script type="text/javascript">
       $(function(){
-        $("#nav-01").load("https://dev.m86.work/nav/navigation.html");
-        $("#footer-01").load("https://dev.m86.work/footer/copyright.html");
+        $("#nav-01").load("https://dev.m86.work/assets/nav/navigation.html");
+        $("#footer-01").load("https://dev.m86.work/assets/footer/copyright.html");
         $('#myModal').modal('show');
       });
       $(window).on('load',function(){
