update: 限界大会のリンクをアップデート

--- a/assets/nav/navigation.html
+++ b/assets/nav/navigation.html
@@ -11,7 +11,7 @@
             サービス
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" id="genkai" href="https://dev.m86.work/pages/genkai/">限界大会</a>
+            <a class="dropdown-item" id="genkai" href="https://genkai.open-w.net">限界大会</a>
             <a class="dropdown-item" id="warbot" href="https://dev.m86.work/pages/warbot/">WARBot</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" id="other" href="#">その他</a>
