update: 自動で新ページに移動するように更新ｎ

--- a/assets/nav/navigation.html
+++ b/assets/nav/navigation.html
@@ -12,28 +12,21 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" id="genkai" href="https://genkai.open-w.net">限界大会</a>
-            <a class="dropdown-item" id="warbot" href="https://dev.m86.work/pages/warbot/">WARBot</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" id="other" href="#">その他</a>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="blog" href="https://minato86.hatenablog.com/">ブログ</a>
+          <a class="nav-link" id="blog" href="https://blog.minato86.me">ブログ</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="othersite" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             関連サイト
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" id="outlogging" href="https://outlogging.work/">OutLogging</a>
             <a class="dropdown-item" id="genkaimusic" href="https://genkaimusic.com/">限界音楽村</a>
           </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="info" href="https://lab.m86.work/">お知らせ</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" id="donate" href="https://dev.m86.work/donate/">寄付</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="contact" href="https://docs.google.com/forms/d/e/1FAIpQLSdSxK0hMhhZ3FnuHu3NrF1nHID0SPFVB3bQ4jpIWG97LeClQQ/viewform">お問い合わせ</a>
