--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		<script type="text/javascript">
 		$(function(){
-			$("#nav-01").load("https://dev.m86.work/assets/nav/navigation.html");
-			$("#footer-01").load("https://dev.m86.work/assets/footer/copyright.html");
+			$("#nav-01").load("./assets/nav/navigation.html");
+			$("#footer-01").load("./assets/footer/copyright.html");
 		});
 		</script>
 		<style>
@@ -73,35 +73,8 @@
 				</div>
 			</div>
 		<div class="container my-5">
-			<!--
-            <div class="alert alert-primary" role="alert">
-                <strong>お知らせ:</strong>
-                只今StarLightは集中メンテナンスを行っております。
-            </div>
-			-->
-			<h2>StarLightって何？</h2>
-			<hr class="mb-4">
-			<p>Minato86によって運営されているWebサービスやサーバーをまとめて「StarLight Webサービス」と言います。</p>
-			<p>便利なWebサービスをホスト、皆様に提供することが使命です。</p>
-			<center>
-				<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-				<!-- devsites -->
-				<ins class="adsbygoogle"
-					style="display:block"
-					data-ad-client="ca-pub-7860710257272145"
-					data-ad-slot="2222341411"
-					data-ad-format="auto"
-					data-full-width-responsive="true"></ins>
-				<script>
-				(adsbygoogle = window.adsbygoogle || []).push({});
-				</script>
-			</center>
-			<h2 class="mt-5">運営サービス一覧</h2>
-			<hr class="mb-4">
-			<h3>WARBot</h3>
-			<p>愛され続けてついに1周年を突破したDiscordのBot。<br>
-			限界大会のお題投稿などを行っています。</p>
-			<a class="btn btn-primary" href="./pages/warbot/" role="button">公式サイト</a>
+            <p>StarLight Webサービスは更新を終了しました。<br>
+            このサイトは更新されません。</p>
 		</div>
 		<div class="container my-5">
 			<h2>お問い合わせ</h2>
