--- a/pages/genkai/index.html
+++ b/pages/genkai/index.html
@@ -5,44 +5,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.4/umd/popper.min.js" integrity="sha512-eUQ9hGdLjBjY3F41CScH3UX+4JDSI9zXeroz7hJ+RteoCaY+GP/LDoM8AO+Pt+DRFw3nXqsjh9Zsts8hnYv8/A==" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap" rel="stylesheet"> 
     <style>
-    @media screen and (max-width: 480px) {
-        .mobile {
-            font-size : 30px; 
+        .outer {
+            display: table;
+            width: 100vw;
+            height: 100vh;
         }
-    }
-    .jumbotron {
-        background-color: dimgray;
-    }
-    .jt-1 {
-        background-color: #7986cb;
-    }
-    .jt-2 {
-        background-color: #ffe082;
-    }
-    .jt-3 {
-        background-color: #4dd0e1;
-    }
-    .center {
-        text-align: center;
-    }
-    body {
-        font-family: 'Noto Sans JP', sans-serif;
-    }
-    h1 {
-        font-weight: 700;
-    }
-    h3 {
-        font-weight: 600;
-    }
-    .large {
-        font-size: 120%;
-    }
+
+        .inner {
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Noto Sans JP', sans-serif;
+        }
     </style>
     <link rel="apple-touch-icon" sizes="180x180" href="https://dev.m86.work/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://dev.m86.work/favicon/favicon-32x32.png">
@@ -81,15 +65,12 @@
       });
     </script>
   </head>
-  <body onload="location.href='https://genkai.open-w.net'">
-    <div id="nav-01">
-    </div>
-    <section id="main">
-        <div class="container">
-            <p>このページは移行しました。自動で移動しない場合は<a href="https://genkai.open-w.net">こちら</a>をクリックしてください。</p>
+  <body>
+    <div class="outer">
+        <div class="inner">
+            <h1>サイト移行のお知らせ</h1>
+            <p>このサイトは<a href="https://genkai.open-w.net">こちら</a>に移行しました。</p>
         </div>
-    </section>
-    <div id="footer-01" class="mt-5">
     </div>
-  </body>
+</body>
 </html>
